Preserve the encoding of the argument in IndexError [Bug #18160]